--- a/index.html
+++ b/index.html
@@ -10,10 +10,62 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 
+    <!-- fontawesome link  -->
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <!-- css link  -->
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     
+
+    <header class="header-section">
+        <div class="top-nav">
+            <nav>
+                <div class="container">
+
+                    <div class="top-navbar d-flex justify-content-b align-items">
+
+                        <div class="logo">
+                            <img src="./assets/logo-navbar.png" alt="">
+                        </div>
+
+                        <div class="main-menu">
+                            <menu>
+                                <ul class="d-flex align-items">
+                                    <li><a href="#">features</a></li>
+                                    <li><a href="#">how it works</a></li>
+                                    <li><a href="#">why it's different</a></li>
+                                </ul>
+
+                            </menu>
+                        </div>
+
+                        <div class="nav-btn ">
+                            <a class="btn-primary" href="">get early access</a>
+
+                        </div>
+
+                    </div>
+                </div>
+            </nav>
+        </div>
+
+        <div class="hero-section">
+
+            <div class="container">
+
+
+
+
+            </div>
+
+        </div>
+
+    </header>
+
+
+
 </body>
 </html>
