create hero section with all hover effects and design according to the figma

--- a/index.html
+++ b/index.html
@@ -53,14 +53,28 @@
         </div>
 
         <div class="hero-section">
+            <div class="banner-area">
+                <div class="container">
 
-            <div class="container">
+                    <div class="banner-content text-align">
+
+                        <button><i class="fa-regular fa-circle-dot"></i> early access now open</button>
+
+                        <h1>structured thinking, <span>not just note-talking</span></h1>
+                        <p>A private space to store notes, links, and learning summaries — designed to <br>
+                            help you think clearly, connect ideas, and turn learning into long-term knowledge.
+                        </p>
+
+                        <div class="banner-button">
+                            <a class="btn-primary banner-btn" href="">start building your vault <i class="fa-solid fa-arrow-right-long"></i></a>
+                            <a class="btn-transparent" href="#"><i class="fa-solid fa-play"></i> see how it works</a>
+                        </div>
+
+                    </div>
 
 
-
-
+                </div>
             </div>
-
         </div>
 
     </header>
