design note section and create card with image and text

--- a/index.html
+++ b/index.html
@@ -79,6 +79,68 @@
 
     </header>
 
+    <section class="note-section">
+
+        <div class="container">
+
+            <div class="note-area">
+
+                <div class="note-title text-align">
+                    <h2>notes don't fail,structure does</h2>
+                    <p>You're not bad at learning. Your tools just weren't built for how knowledge actually works.</p>
+
+                </div>
+
+                <div class="note-card-section d-flex justify-content-b align-items">
+
+                    <div class="note-card text-align">
+                        <div class="card-image">
+                            <img src="./assets/Vector.png" alt="">
+                        </div>
+                        <div class="note-card-content">
+                            <h4>scattered notes</h4>
+                            <p>Your ideas live in 10 different apps, none of them connected.</p>
+                        </div>
+                    </div>
+                    <div class="note-card text-align">
+                        <div class="card-image">
+                            <img src="./assets/Bookmarks.png" alt="">
+                        </div>
+                        <div class="note-card-content">
+                            <h4>bookmark overloaded</h4>
+                            <p>Hundreds of saved links you'll never revisit or remember.</p>
+                        </div>
+                    </div>
+                    <div class="note-card text-align">
+                        <div class="card-image">
+                            <img src="./assets/Brain.png" alt="">
+                        </div>
+                        <div class="note-card-content">
+                            <h4>no idea connections</h4>
+                            <p>Insights stay isolated, never building into bigger understanding.</p>
+                        </div>
+                    </div>
+                    <div class="note-card text-align">
+                        <div class="card-image">
+                            <img src="./assets/Info.png" alt="">
+                        </div>
+                        <div class="note-card-content">
+                            <h4>forgetting what you learned</h4>
+                            <p>Knowledge fades because there's no system to retain it.</p>
+                        </div>
+                    </div>
+
+
+                </div>
+
+
+
+
+            </div>
+        </div>
+
+    </section>
+
 
 
 </body>
