--- a/index.html
+++ b/index.html
@@ -142,6 +142,41 @@
     </section>
 
 
+    <section class="apps">
+        <div class="container">
+            <div class="app-section d-flex align-items justify-content-e">
+
+                <div class="brain-image">
+                    <img src="./assets/knowledge.png" alt="">
+                </div>
+
+                <div class="app-content">
+
+                    <div class="app-t-des">
+
+                        <h5>the solution</h5>
+                        <h2>your second brain, structured by design</h2>
+                        <p>Personal Knowledge Vault isn't another note-taking app. z It's a thinking environment where every note, link, and summary becomes part of an interconnected web of understanding.</p>
+
+                    </div>
+
+                    <div class="app-list">
+                        <p><i class="fa-solid fa-circle-check"></i> Capture ideas with structure built-in from day one</p>
+                        <p><i class="fa-solid fa-circle-check"></i> Connect related concepts automatically as you write</p>
+                        <p><i class="fa-solid fa-circle-check"></i> Build lasting knowledge through reflection prompts</p>
+                        <p><i class="fa-solid fa-circle-check"></i> Find anything instantly with semantic search</p>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
+    </section>
+
+
+
 
 </body>
 </html>
