--- a/index.html
+++ b/index.html
@@ -176,6 +176,33 @@
     </section>
 
 
+    <section class="ready-to-think">
+
+        <div class="container">
+
+            <div class="ready text-align">
+
+                <div class="think-t-des">
+                    <h3>ready to think more clearly?</h3>
+                    <p>Join thousands of learners who are building their personal knowledge vaults.<br/> Start free, no credit card required.    </p>
+                </div>
+
+                <div class="think-more">
+                    <div class="think-btn">
+                        <a class="btn-primary" href="">get early access <i class="fa-solid fa-arrow-right-long"></i></a>
+                    </div>
+                    <div class="more-des">
+                        <p>Free during early access • No credit card needed</p>
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
+
+    </section>
+
 
 
 </body>
