create a home page using html and css

--- a/index.html
+++ b/index.html
@@ -205,5 +205,38 @@
 
 
 
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-section">
+
+                <div class="f-des d-flex justify-content-b">
+
+                    <div class="f-logo">
+                        <img src="./assets/logo-footer.png" alt="">
+                    </div>
+
+                    <div class="f-content">
+                        <h5>social links</h5>
+                        <div class="f-icons d-flex justify-content-b align-items">
+                            <a href=""><i class="fa-brands fa-x-twitter"></i></a>
+                            <a href=""><i class="fa-brands fa-linkedin-in"></i></a>
+                            <a href=""><i class="fa-brands fa-facebook-f"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="copyright text-align">
+                    <p>&copy;2026 Personal Knowledge Vault. All rights reserved.</p>
+                </div>
+
+            </div>
+        </div>
+
+    </footer>
+
+
+
+
+
 </body>
 </html>
